# autoro

./: .gitignore  README.md  courses.md  test.sh
backend/: .env  .env.example  Cargo.toml
backend/src/: config.rs  etoro.rs  main.rs  models.rs  routes.rs  strategy.rs  trader.rs
frontend/: package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
frontend/src/app/pages/assets/: assets.component.ts
